@@ -1,6 +1,8 @@
 Revision history for IO-Stem
 
 {{$NEXT}}
+    - Add more examples to README
+    - Add more tests
 
 0.0.1  2022-08-30T16:59:46-05:00
     - Initial version
